@@ -3,3 +3,6 @@ GitHub repo created.
 
 -- okt 28 --
 Antton: Started implementing the first of the examples, the histogram of temperatures for a single day.
+
+-- okt29 --
+Antton: Finished rudimentary imlpementation of the basic histogram example.
